--- a/assign1/assignment1.html
+++ b/assign1/assignment1.html
@@ -1,3 +1,8 @@
+/* Name: Sahaj Dhakal
+Program: Computer System Technician
+Date: 25/05/2024
+Student ID: 100945647 */
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
