Added HTML comments
Added <!-- HTML comments --> to satisfy requirements

--- a/assign2/part1/index.html
+++ b/assign2/part1/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+<!--
+ Name: Sahaj Dhakal
+Program: Computer System Technician
+Date: 29/05/2024
+Student ID: 100945647 
+Assignment 2 Part 1 implementation of image concepts
+-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Mozilla splash page</title>
