--- a/assign1/part1/index.html
+++ b/assign1/part1/index.html
@@ -1,7 +1,9 @@
-/* Name: Sahaj Dhakal
+<!--
+ Name: Sahaj Dhakal
 Program: Computer System Technician
 Date: 25/05/2024
-Student ID: 100945647 */
+Student ID: 100945647 
+-->
 
 <!DOCTYPE html>
 <html lang="en">
