--- a/Assignment-2/part2.html
+++ b/Assignment-2/part2.html
@@ -1,3 +1,9 @@
+<!--
+ Name: Sahaj Dhakal
+Program: Computer System Technician
+Date: 06/06/2024
+Student ID: 100945647 
+-->
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
